--- a/src/scss/component/_layout.scss
+++ b/src/scss/component/_layout.scss
@@ -1,1 +1,37 @@
 @import "variables";
+
+html, body { height: 100%; margin: 0; }
+body { overflow-x: hidden; }
+#wrap { width: 500%; height: 100%; display: flex; flex-wrap: nowrap; }
+section { width: 100%; height: 100%; position: relative; display: flex; justify-content: center; align-items: center; }
+.section01 { background: orange; }
+.section02 { background: yellowgreen; }
+.section03 { background: firebrick; }
+.section04 { background: cornflowerblue; }
+.section05 { background: seagreen; }
+
+.progress {
+  position: fixed;
+  z-index: 12;
+  top: 0;
+  left: 0;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 0;
+  height: 15px;
+  border: none;
+  background: transparent;
+  background: linear-gradient(to left, #db38b5,#01b3e3,#25ce7b,#fdc741,#ff6b01,#fc4236);
+  background-attachment: fixed;
+}
+progress::-webkit-progress-bar {
+  background: transparent;
+}
+progress::-webkit-progress-value {
+  background: linear-gradient(to left, #db38b5,#01b3e3,#25ce7b,#fdc741,#ff6b01,#fc4236);
+  background-attachment: fixed;
+}
+progress::-moz-progress-bar {
+  background: linear-gradient(to left, #db38b5,#01b3e3,#25ce7b,#fdc741,#ff6b01,#fc4236);
+  background-attachment: fixed;
+}
