main / profile section

--- a/src/scss/component/_variables.scss
+++ b/src/scss/component/_variables.scss
@@ -1,13 +1,4 @@
-$text-01: #37354e;
-$text-04: #afaeb8;
-$text-03: #9b9aa6;
-$text-02: #737183;
-$blurple: #6839d3;
+$text: #121212;
 $white: #ffffff;
-$sky: #8bceff;
-$sun-yellow: #fcd532;
-$primary : red;
-
-$font: 'Noto Sans CJK KR Regular';
-$font-medium: 'Noto Sans CJK KR Medium';
-$font-bold: 'Noto Sans CJK KR Bold';
+$primary : #d50037;
+$font: 'TT Commons';
