* career page * colors changed * images added * popup (working)

--- a/src/scss/component/_variables.scss
+++ b/src/scss/component/_variables.scss
@@ -1,4 +1,10 @@
 $text: #121212;
+$primary : #f66867;
+$gray: #3e4146;
+$blue: #689bf6;
+$yellow: #ffd84c;
+$orange: #f66867;
 $white: #ffffff;
-$primary : #d50037;
+$black: #000000;
+
 $font: 'TT Commons';
