--- a/src/scss/fonts/NotoSansCJK.scss
+++ b/src/scss/fonts/NotoSansCJK.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Noto Sans CJK KR Regular';
+  font-family: 'TT Commons';
   font-style: 400;
   src: local('Noto Sans CJK KR Regular'),
   url('../fonts/NotoSansCJK/NotoSansCJKkr-Regular.woff') format('woff'),
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: 'Noto Sans CJK KR Medium';
+  font-family: 'TT Commons';
   font-style: normal;
   font-weight: 500;
   src: local('Noto Sans CJK KR Medium'),
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-  font-family: 'Noto Sans CJK KR Bold';
+  font-family: 'TT Commons';;
   font-style: normal;
   font-weight: 900;
   src: local('Noto Sans CJK KR Bold'),
