--- a/src/scss/component/_common.scss
+++ b/src/scss/component/_common.scss
@@ -61,6 +61,7 @@ ul, ol {
   right: 50px;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 1;
 
   ul {
     display: flex;
@@ -83,34 +84,20 @@ ul, ol {
 
     &.active {
       transform: scale(2);
+      background-color: $primary;
+    }
+    &:nth-child(2) {
+      &.active {
+        background-color: $text;
+      }
     }
   }
 }
-
-//@keyframes blink {
-//  0% {
-//    opacity: 1;
-//  }
-//  50% {
-//    opacity: 0;
-//  }
-//  100% {
-//    opacity: 1;
-//  }
-//}
-//
-//@keyframes scrollMove {
-//  0% {
-//    left: -100%;
-//  }
-//
-//  100% {
-//    left: 100%;
-//  }
-//}
 
 @media (max-width: 799px) {
   .pagination-wrap {
     display: none;
   }
 }
+
+
