--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -20,7 +20,6 @@ section {
       display: block;
       width: 50%;
       height: 100%;
-      overflow: hidden;
 
       .bg {
         width: 100%;
@@ -40,6 +39,7 @@ section {
     .main-text {
       position: relative;
       width: 50%;
+      overflow: hidden;
 
       .box {
         display: flex;
@@ -50,52 +50,68 @@ section {
         justify-content: center;
         padding-left: 10%;
 
+        .dots {
+          .dot {
+            position: absolute;
+            border-radius: 100%;
+            z-index: 11;
+
+            &:nth-of-type(1) {
+              top: -80px;
+              right: -80px;
+              width: 160px;
+              height: 160px;
+              background-color: $blue;
+              animation: float 6s ease-in-out infinite;
+
+              @media (min-width: 768px) {
+                top: -190px;
+                right: -190px;
+                width: 400px;
+                height: 400px;
+              }
+            }
+
+            &:nth-of-type(2) {
+              bottom: -120px;
+              left: -120px;
+              width: 240px;
+              height: 240px;
+              background-color: $orange;
+              animation: float 8s ease-in-out infinite;
+            }
+
+            &:nth-of-type(3) {
+              bottom: -50px;
+              right: -50px;
+              width: 100px;
+              height: 100px;
+              background-color: $yellow;
+              animation: float 4s ease-in-out infinite;
+            }
+          }
+        }
+
         .title {
-          font-size: 20px;
+          font-size: 30px;
           font-weight: 500;
           letter-spacing: 0.8px;
           margin-bottom: 10px;
           transition: .3s;
           transform-origin: top right;
-          //animation: shrink 1.5s;
         }
 
         .title-lg {
-          font-size: 50px;
+          font-size: 80px;
           font-weight: 800;
           margin-bottom: 50px;
           transform-origin: right top;
           transition: .3s;
-          //animation: shrinkMore 1.5s;
         }
 
         .title-sm {
-          font-size: 16px;
+          font-size: 24px;
           letter-spacing: -0.3px;
-          //margin-bottom: 10px;
-          //animation: shrink 1s;
-          //transform: scale(1.5)s translate(50%, 290%);
-        }
-      }
-
-      #bubble-1 {
-        position: absolute;
-        left: 1px;
-        top: 0;
-
-        .bubble-path-1 {
-          fill: $primary;
-        }
-      }
-
-      #bubble-2 {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        transform: rotate(180deg);
-
-        .bubble-path-1 {
-          fill: rgba(213, 0, 55, .5);
         }
       }
     }
@@ -103,8 +119,7 @@ section {
 }
 
 .profile {
-  //background-color: $primary;
-  background: linear-gradient($primary 50%, #ffffff 50%);
+  background: linear-gradient($primary 50%, transparent 50%);
 
   .inner {
     width: 100%;
@@ -150,7 +165,7 @@ section {
         .card-inner {
           background-color: #fff;
           border-radius: 5px;
-          padding: 30px 20px;
+          padding: 40px 20px;
           box-shadow: 1px 1px 10px rgba(0,0,0,.2);
 
           .card-header {
@@ -167,6 +182,8 @@ section {
             }
 
             .title {
+              display: block;
+              text-align: center;
               font-size: 26px;
               text-transform: uppercase;
               font-weight: bold;
@@ -175,6 +192,7 @@ section {
           }
 
           .item-list {
+            padding: 0 20px;
             ul {
               li {
                 span {
@@ -195,6 +213,7 @@ section {
                     letter-spacing: -.4px;
 
                     a {
+                      display: block;
                       color: inherit;
                       text-transform: lowercase;
                       text-decoration: none;
@@ -238,30 +257,85 @@ section {
   }
 }
 
-.section03 {
-  background: firebrick;
-}
+.career {
+  .inner {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 50px;
+    align-items: flex-start;
 
-.section04 {
-  background: cornflowerblue;
+    .year-info {
+      width: 25%;
+      padding-top: 50px;
+
+      .heading {
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+      }
+      .year {
+        font-size: 14px;
+        font-weight: 500;
+        margin-bottom: 10px;
+      }
+    }
+
+    .work-list {
+      width: 75%;
+      padding-top: 50px;
+
+      ul {
+        display: flex;
+        width: 100%;
+        flex-direction: column-reverse;
+
+        .item {
+          position: relative;
+          display: flex;
+          width: 100%;
+          border-bottom: 2px solid $text;
+
+          a {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 10px;
+            color: $text;
+            text-decoration: none;
+
+            .title {
+              font-size: 20px;
+              font-weight: bold;
+            }
+
+            .year {
+              font-size: 18px;
+              font-weight: 500;
+            }
+          }
+
+          &:last-child {
+            border-top: 2px solid $text;
+          }
+        }
+      }
+
+      .alert {
+        color: $primary;
+        margin-top: 10px;
+        font-size: 14px;
+      }
+    }
+  }
 }
 
 .section05 {
   background: seagreen;
-}
-
-progress::-webkit-progress-bar {
-  background: transparent;
-}
-
-progress::-webkit-progress-value {
-  background: linear-gradient(to left, #db38b5, #01b3e3, #25ce7b, #fdc741, #ff6b01, #fc4236);
-  background-attachment: fixed;
-}
-
-progress::-moz-progress-bar {
-  background: linear-gradient(to left, #db38b5, #01b3e3, #25ce7b, #fdc741, #ff6b01, #fc4236);
-  background-attachment: fixed;
 }
 
 @media (max-width: 799px) {
@@ -302,45 +376,5 @@ progress::-moz-progress-bar {
         }
       }
     }
-  }
-}
-
-@keyframes showUp {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes moveRight {
-  0% {
-    transform: translate(0%);
-  }
-
-  100% {
-    transform: translateX(200%);
-  }
-}
-
-@keyframes shrink {
-  0% {
-    transform: scale(2);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes shrinkMore {
-  0% {
-    transform: scale(4);
-  }
-
-  100% {
-    transform: scale(1);
   }
 }
