* mobile - main/profile/career

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,8 @@
 @import "component/config";
 
 // fonts
-@import "fonts/NotoSansCJK";
+//@import "fonts/NotoSansCJK";
+@import "fonts/esamanru";
 @import "fonts/TTCommons";
 @import "fonts/fontAwesome";
 
