--- a/src/scss/fonts/TTCommons.scss
+++ b/src/scss/fonts/TTCommons.scss
@@ -6,7 +6,7 @@
   url('../fonts/TTCommons/TTCommons-Regular.woff') format('woff'),
   url('../fonts/TTCommons/TTCommons-Regular.eot') format('embedded-opentype'),
   url('../fonts/TTCommons/TTCommons-Regular.ttf') format('truetype');
-  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
+  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039, U+005B-0060, U+007B-007E, U+26;
 }
 
 @font-face {
@@ -17,7 +17,7 @@
   url('../fonts/TTCommons/TTCommons-Regular.woff') format('woff'),
   url('../fonts/TTCommons/TTCommons-Regular.eot') format('embedded-opentype'),
   url('../fonts/TTCommons/TTCommons-Regular.ttf') format('truetype');
-  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
+  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039, U+005B-0060, U+007B-007E, U+26;
 }
 
 @font-face {
@@ -28,7 +28,7 @@
   url('../fonts/TTCommons/TTCommons-Bold.woff') format('woff'),
   url('../fonts/TTCommons/TTCommons-Bold.eot') format('embedded-opentype'),
   url('../fonts/TTCommons/TTCommons-Bold.ttf') format('truetype');
-  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
+  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039, U+005B-0060, U+007B-007E, U+26;
 }
 
 @font-face {
