--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -264,7 +264,7 @@ section {
     height: 100%;
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 0 7.5%;
     align-items: flex-start;
 
     .year-info {
@@ -304,9 +304,13 @@ section {
             width: 100%;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 10px;
+            padding: 20px 10px 18px;
             color: $text;
             text-decoration: none;
+
+            &:hover {
+              color: $primary;
+            }
 
             .title {
               font-size: 20px;
