--- a/src/html/include/head.html
+++ b/src/html/include/head.html
@@ -3,12 +3,18 @@
   <meta name="Referrer" content="origin"/>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="apple-mobile-web-app-title" content="acha" />
+  <meta name="apple-mobile-web-app-title" content="이주연 포트폴리오"/>
   <meta name="robots" content="index,nofollow"/>
-  <meta name="description" content="acha"/>
-  <meta name="keywords" content="acha"/>
-  <link rel="shortcut icon" href="../favicon.ico">
-  <title>JUYEON Portfolio</title>
-  <link type="text/css" rel="stylesheet" href="../css/style.css"/>
-  <script src="../js/bundle.js"></script>
+  <meta name="description" content="이주연 퍼블리싱 포트폴리오"/>
+  <meta name="keywords" content="이주연 퍼블리싱 포트폴리오"/>
+  <meta property="og:url" content="https://janie-0919.github.io/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="이주연 포트폴리오" />
+  <meta property="og:description" content="이주연 퍼블리싱 포트폴리오" />
+  <meta property="og:image" content="dist/img/og-image.png" />
+  <link rel="shortcut icon" href="favicon.ico">
+  <link type="text/css" rel="stylesheet" href="dist/css/style.css"/>
+  <script src="dist/js/bundle.js"></script>
+  <script src="dist/js/common.js"></script>
+  <title>이주연 포트폴리오</title>
 </head>
