--- a/src/scss/component/_popup.scss
+++ b/src/scss/component/_popup.scss
@@ -2,23 +2,151 @@
 
 .popup {
   position: fixed;
-  width: calc(100% - 40px);
-  height: calc(100% - 40px);
+  width: calc(100% - 100px);
+  height: calc(100% - 100px);
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.9);
   visibility: hidden;
   opacity: 0;
   transition: all .3s;
-  background-color: $white;
-  z-index: 10;
+  background-color: #efefe6;
+  z-index: 150;
+
+  .btn-close {
+    position: absolute;
+    display: block;
+    width: 60px;
+    height: 60px;
+    right: 20px;
+    top: 20px;
+
+    .left {
+      height: 4px;
+      width: 60px;
+      position: absolute;
+      margin-top: 24px;
+      background-color: $orange;
+      border-radius: 2px;
+      transform: rotate(45deg);
+      transition: all .3s ease-in;
+    }
+
+    .right {
+      height: 4px;
+      width: 60px;
+      position: absolute;
+      margin-top: 24px;
+      background-color: $orange;
+      border-radius: 2px;
+      transform: rotate(-45deg);
+      transition: all .3s ease-in;
+    }
+
+    .close {
+      position: absolute;
+      margin: 60px 0 0 5px;
+      color: transparent;
+      font-size: 0;
+      transition: all .3s ease-in;
+      opacity: 0;
+    }
+
+    &:hover {
+      .left {
+        transform: rotate(-45deg);
+        background-color: $yellow;
+      }
+      .right {
+        transform: rotate(45deg);
+        background-color: $yellow;
+      }
+      .close {
+        opacity: 1;
+      }
+    }
+  }
+
+  .content {
+    height: 100%;
+
+    .box {
+      height: 100%;
+
+      .row {
+        display: flex;
+        height: 100%;
+
+        .col {
+          width: 60%;
+
+          &:nth-child(2) {
+            width: 40%;
+
+            .description {
+              width: 80%;
+              margin-top: 40%;
+
+              .inner {
+                background-color: #fcac14;
+                height: 100%;
+                padding: 50px 20px;
+
+                .title {
+                  font-size: 28px;
+                  font-weight: 900;
+                  line-height: 34px;
+                  margin-bottom: 15px;
+                }
+
+                .desc {
+                  font-size: 18px;
+                  font-weight: bold;
+                  line-height: 20px;
+                  margin-bottom: 50px;
+                }
+
+                .bar-wrap {
+                  position: relative;
+                  width: 100%;
+                  height: 10px;
+                  background-color: #fff;
+                  border-radius: 5px;
+
+                  &::before {
+                    content: '기여도';
+                    position: absolute;
+                    font-size: 12px;
+                    top: -25px;
+                    left: 0;
+                  }
+
+                  .bar {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 90%;
+                    height: 100%;
+                    background-color: $orange;
+                    border-radius: 5px;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 
   &.open {
     visibility: visible;
     opacity: 1;
-    transform: translate(-50% , -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
   }
 }
+
 .scrollOff {
+  position: relative;
   overflow-y: hidden !important;
 }
