--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -308,7 +308,7 @@ section {
             width: 100%;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 10px 18px;
+            padding: 20px 10px 21px;
             color: $text;
             text-decoration: none;
 
@@ -539,16 +539,29 @@ section {
 
           .item {
             a {
-              padding: 15px 5px;
+              padding: 7px 5px 15px;
+
+              &:hover {
+                .title {
+                  transform: translateX(0);
+                  color: $primary;
+                  transition: none;
+                }
+              }
 
               .title {
-                width: calc(100% - 100px);
+                display: inline-block;
+                width: calc(100% - 110px);
                 font-size: 18px;
+                line-height: 24px;
+                padding-top: 3px;
               }
 
               .year {
-                width: 100px;
+                display: inline-block;
+                width: 110px;
                 font-size: 14px;
+                padding-top: 3px;
               }
             }
           }
