--- a/src/scss/component/_variables.scss
+++ b/src/scss/component/_variables.scss
@@ -4,7 +4,9 @@ $gray: #3e4146;
 $blue: #689bf6;
 $yellow: #ffd84c;
 $orange: #f66867;
+$green: #03BE9F;
 $white: #ffffff;
+$skyblue: #40CEF3;
 $black: #000000;
 
 $font: 'TT Commons';
