--- a/src/scss/component/_common.scss
+++ b/src/scss/component/_common.scss
@@ -88,7 +88,7 @@ ul, ol {
     }
     &:nth-child(2) {
       &.active {
-        background-color: $text;
+        //background-color: $text;
       }
     }
   }
