--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -388,6 +388,14 @@ section {
               }
             }
 
+            .desc {
+              font-size: 16px;
+              font-weight: normal;
+              line-height: 24px;
+              margin-bottom: 10px;
+              padding-left: 30px;
+            }
+
             .badge-wrap {
               padding-left: 10px;
               margin-bottom: 20px;
@@ -644,7 +652,7 @@ section {
 
           .item {
             .item-header {
-              padding: 7px 5px 15px;
+              padding: 15px 5px 15px;
 
               &:hover {
                 .title {
@@ -659,7 +667,6 @@ section {
                 width: calc(100% - 110px);
                 font-size: 18px;
                 line-height: 24px;
-                padding-top: 3px;
               }
 
               .year {
