--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -1,7 +1,9 @@
 @import '../component/variables';
+
 html {
   overflow: visible !important;
 }
+
 // PC
 //section {
 //  width: 100%;
@@ -31,13 +33,15 @@ html {
 section {
   display: block;
   width: 100%;
-  height: 100vh;
   position: relative;
   justify-content: initial;
   align-items: initial;
+  overflow: hidden;
 }
 
 .main {
+  height: 100vh;
+
   .inner {
     display: flex;
     width: 100%;
@@ -149,7 +153,7 @@ section {
 .profile {
   display: flex;
   align-items: center;
-  background: linear-gradient($green 50%, transparent 50%);
+  background: linear-gradient($green 50%, #f2f2f2 50%);
 
   .inner {
     display: flex;
@@ -157,7 +161,7 @@ section {
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 100px;
+    padding: 100px;
 
     > .title {
       font-size: 40px;
@@ -291,8 +295,6 @@ section {
 }
 
 .career {
-  height: 100%;
-
   .inner {
     display: flex;
     height: 100%;
@@ -334,6 +336,12 @@ section {
           width: 100%;
           border-bottom: 2px solid $text;
 
+          &.active {
+            .item-header {
+              color: $primary;
+            }
+          }
+
           .item-header {
             display: flex;
             width: 100%;
@@ -354,13 +362,14 @@ section {
               line-height: 30px;
               font-weight: bold;
               word-break: keep-all;
+              padding-top: 3px;
             }
 
             .year {
               display: block;
               width: 155px;
               font-size: 18px;
-              font-weight: bold;
+              font-weight: 300;
               text-align: right;
             }
 
@@ -391,9 +400,27 @@ section {
             .desc {
               font-size: 16px;
               font-weight: normal;
-              line-height: 24px;
-              margin-bottom: 10px;
+              line-height: 28px;
+              margin-bottom: 20px;
               padding-left: 30px;
+
+              a {
+                color: $blue;
+              }
+            }
+
+            .video {
+              width: 100%;
+              max-width: 500px;
+              margin: 0 auto;
+
+              + .video {
+                margin-top: 10px;
+              }
+
+              video {
+                width: 100%;
+              }
             }
 
             .badge-wrap {
@@ -401,12 +428,16 @@ section {
               margin-bottom: 20px;
 
               .badge {
-                display: inline-block;
                 font-size: 15px;
+                width: fit-content;
+                height: 28px;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
                 font-weight: 600;
                 color: white;
                 border-radius: 5px;
-                padding: 5px;
+                padding: 2px 5px 0;
                 text-transform: uppercase;
                 animation-duration: 4s;
 
@@ -437,13 +468,23 @@ section {
             }
 
             .img-container {
-              img {
+              text-align: center;
+
+              a {
                 display: inline-block;
-                width: auto;
-                height: auto;
-                max-width: 300px;
-                max-height: 300px;
+                background-color: transparent;
+                color: transparent;
                 margin-right: 10px;
+                vertical-align: middle;
+                margin-bottom: 6px;
+
+                img {
+                  display: inline-block;
+                  width: auto;
+                  height: auto;
+                  max-width: 250px;
+                  max-height: 250px;
+                }
               }
             }
           }
@@ -652,7 +693,7 @@ section {
 
           .item {
             .item-header {
-              padding: 15px 5px 15px;
+              padding: 15px 0;
 
               &:hover {
                 .title {
@@ -676,6 +717,19 @@ section {
                 padding-top: 3px;
               }
             }
+
+            .item-body {
+              .img-container {
+                a {
+                  margin-bottom: 10px;
+
+                  img {
+                    max-width: 150px;
+                    max-height: 150px;
+                  }
+                }
+              }
+            }
           }
         }
 
@@ -693,6 +747,12 @@ section {
 }
 
 @keyframes barAnimation {
-  0% { opacity: 0; color: transparent }
-  100% { opacity: 1; color: white }
+  0% {
+    opacity: 0;
+    color: transparent
+  }
+  100% {
+    opacity: 1;
+    color: white
+  }
 }
