--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -237,6 +237,10 @@ section {
                     text-transform: uppercase;
                     margin-bottom: 10px;
                     letter-spacing: -.4px;
+
+                    i {
+                      margin-left: 5px;
+                    }
                   }
 
                   &:nth-child(2) {
@@ -253,6 +257,10 @@ section {
                       color: inherit;
                       text-transform: lowercase;
                       text-decoration: none;
+
+                      &:hover {
+                        color: $primary;
+                      }
                     }
                   }
                 }
@@ -530,7 +538,39 @@ section {
 }
 
 .section05 {
-  background: seagreen;
+  width: 100%;
+  height: 150px;
+  background: $primary;
+
+  .contact {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .item {
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      a {
+        display: flex;
+        align-items: center;
+        font-size: 24px;
+        color: #fff;
+        text-decoration: none;
+
+        i {
+          margin-right: 20px;
+          transform: translateY(4px);
+        }
+      }
+    }
+  }
 }
 
 // MOBILE
